--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
-  "overrides": { "autoprefixer": "10.4.5" },
-
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
     "build": "react-scripts build",
